--- a/projeto_cad_usuarios/requirements.txt
+++ b/projeto_cad_usuarios/requirements.txt
@@ -1,7 +1,37 @@
 asgiref==3.7.2
+certifi==2023.5.7
+charset-normalizer==3.2.0
+contourpy==1.1.0
+cycler==0.11.0
 Django==4.2.4
+docutils==0.20.1
+fonttools==4.41.0
+iapws==1.5.3
+idna==3.4
+kiv==0.0.6
+Kivy==2.2.1
+kivy-deps.angle==0.3.3
+kivy-deps.glew==0.3.1
+kivy-deps.sdl2==0.6.0
+Kivy-Garden==0.1.5
+kiwisolver==1.4.4
+matplotlib==3.7.2
+mysql-connector-python==8.0.32
+numpy==1.25.1
+packaging==23.1
+Pillow==10.0.0
+Pint==0.22
+Pygments==2.15.1
+Pympler==1.0.1
+pyparsing==3.0.9
+pypiwin32==223
 python-dateutil==2.8.2
+PyVISA==1.13.0
+pywin32==306
+requests==2.31.0
+scipy==1.11.1
 six==1.16.0
 sqlparse==0.4.4
+typing_extensions==4.7.1
 tzdata==2023.3
-
+urllib3==2.0.3
